Fix JDK17 port